usecase-3/network-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: backend
spec:
  podSelector:
    matchLabels:
            app: mysql
  ingress:
    - from:
            - podSelector:           
                matchLabels:
                  app: webserver
