usecase-3/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-all-ns-monitoring
  namespace: backend
spec:
  podSelector:
    matchLabels:
            app: mysql
  ingress:
    - from:
            - podSelector:           # chooses pods with type=monitoring
                matchLabels:
                  type: backend
