usecase-3/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyingress
spec:
  crd:
    spec:
      names:
        kind: K8sDenyIngress
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyingress 
        violation [{"msg": msg}] {
          input.review.object.spec.podSelector.matchLabels.app == "mysql"
          input.review.object.spec.ingress[_].from[_].podSelector.matchLabels.app != "webserver"
          msg := "Cannot allow ingress access for the selected pod."
        }
