usecase-3/test-const.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyIngress
metadata:
  name: denyingress
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["NetworkPolicy"]
  parameters:
          labels: ["frontend","front-end"]
