usecase-3/test.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyingress
spec:
  crd:
    spec:
      names:
        kind: K8sDenyIngress
      validation:
              openAPIV3Schema:
                properties:
                  labels:
                    type: array
                    items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyingress 
        violation [{"msg": msg}] {
          some i
          input.review.object.kind == "NetworkPolicy"
          provided := input.review.object.spec.ingress[i].from[i].podSelector.matchLabels.type
          allowed := input.parameters.labels[i]
          provided != allowed[i]
          msg := sprintf("%v is not allowed", [provided])

        }
